[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/MainLevel.gd" type="Script" id=1]
[ext_resource path="res://src/PlayerK.gd" type="Script" id=2]
[ext_resource path="res://scenes/Time.gd" type="Script" id=3]
[ext_resource path="res://scenes/Fanny.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/PlayerF.gd" type="Script" id=5]
[ext_resource path="res://Sprites/LEVEL1/blue_BG.png" type="Texture" id=6]
[ext_resource path="res://Sprites/LEVEL1/Haeuser.png" type="Texture" id=7]
[ext_resource path="res://Sprites/LEVEL1/stars.png" type="Texture" id=8]
[ext_resource path="res://Sprites/LEVEL1/Lampen.png" type="Texture" id=9]
[ext_resource path="res://Sprites/LEVEL1/Wahrzeichen.png" type="Texture" id=10]
[ext_resource path="res://Sprites/LEVEL1/shadow_street.png" type="Texture" id=11]
[ext_resource path="res://Sprites/LEVEL1/zaun.png" type="Texture" id=12]
[ext_resource path="res://Sprites/LEVEL1/horizont.png" type="Texture" id=13]
[ext_resource path="res://Sprites/LEVEL1/netz.png" type="Texture" id=14]
[ext_resource path="res://Sprites/LEVEL1/licht.png" type="Texture" id=16]
[ext_resource path="res://Sprites/lights_v2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/lights_v2_blobs.png" type="Texture" id=18]
[ext_resource path="res://scenes/Kenny.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/SatzSprite.tscn" type="PackedScene" id=20]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.7809
height = 80.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 66.2908
height = 97.1746

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.7361
height = 93.4232

[sub_resource type="CapsuleShape2D" id=4]
radius = 73.077
height = 108.023

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 1495.37, 500.498, 1505.46, 496.083, 1516.61, 503.861, 1517.87, 525.304, 1511.14, 531.401, 1527.54, 540.23, 1528.78, 679.851, 1485.89, 680.692, 1483.6, 544.014, 1498.95, 534.764, 1493.27, 513.742 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 110.632 )

[sub_resource type="PhysicsMaterial" id=7]
friction = 10.0
bounce = 2.0
absorbent = true

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 777.901, 46.3899 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 378.875, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 451.657 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 747.203, 10 )

[node name="MainLevel" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )
winscore = 2
satzno = 2

[node name="PlayerF" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )
speed = 300

[node name="Collider" type="CollisionShape2D" parent="PlayerF"]
position = Vector2( 200, 569.062 )
shape = SubResource( 1 )

[node name="Node2D" parent="PlayerF" instance=ExtResource( 4 )]
position = Vector2( 197.808, 564.445 )
scale = Vector2( 0.2, 0.2 )

[node name="Area2D" type="Area2D" parent="PlayerF"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerF/Area2D"]
position = Vector2( 199.068, 566.965 )
shape = SubResource( 2 )
one_way_collision = true

[node name="ProgressBar" type="ProgressBar" parent="PlayerF"]
margin_left = 230.0
margin_top = 520.0
margin_right = 234.0
margin_bottom = 534.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerK" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="PlayerK"]
position = Vector2( 1100, 564.173 )
shape = SubResource( 3 )

[node name="Node2D" parent="PlayerK" instance=ExtResource( 19 )]
position = Vector2( 1099.56, 568.041 )
scale = Vector2( 0.2, 0.2 )

[node name="Area2D" type="Area2D" parent="PlayerK"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerK/Area2D"]
position = Vector2( 1096.02, 564.271 )
shape = SubResource( 4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerK"]
position = Vector2( -405.312, 0 )
occluder = SubResource( 5 )

[node name="Netz" type="StaticBody2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Netz"]
position = Vector2( 715, 529.756 )
shape = SubResource( 6 )

[node name="Boden" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 7 )

[node name="Collider" type="CollisionShape2D" parent="Boden"]
position = Vector2( 698.146, 680.344 )
shape = SubResource( 8 )

[node name="Links" type="Area2D" parent="Boden"]

[node name="Collider" type="CollisionShape2D" parent="Boden/Links"]
position = Vector2( 328.166, 643.094 )
shape = SubResource( 9 )

[node name="Rechts" type="Area2D" parent="Boden"]

[node name="Collider" type="CollisionShape2D" parent="Boden/Rechts"]
position = Vector2( 1100, 643.094 )
shape = SubResource( 9 )

[node name="WandL" type="StaticBody2D" parent="."]

[node name="WandL" type="CollisionShape2D" parent="WandL"]
position = Vector2( -10.7133, 186.566 )
shape = SubResource( 10 )

[node name="WandL2" type="CollisionShape2D" parent="WandL"]
position = Vector2( 1451.3, 184.795 )
shape = SubResource( 10 )

[node name="Decke" type="CollisionShape2D" parent="WandL"]
position = Vector2( 721.814, -273.824 )
shape = SubResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 720, 360 )
transform = Transform2D( 1, 0, 0, 1, 720, 360 )

[node name="Scoreboard" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fscore" type="Label" parent="Scoreboard"]
margin_left = 25.0
margin_top = 15.0
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 15 )
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="Scoreboard/Fscore"]
modulate = Color( 1, 1, 1, 0.427451 )
self_modulate = Color( 1, 1, 1, 0.588235 )
show_behind_parent = true
position = Vector2( -8.91664, 8.64712 )
scale = Vector2( 0.514367, 0.646475 )
color = Color( 0.133333, 0.121569, 0.121569, 1 )
polygon = PoolVector2Array( -60.0493, -28.5006, -37.3867, 18.722, 49.4541, 18.754, 73.5145, -29.0304 )

[node name="Kscore" type="Label" parent="Scoreboard"]
margin_left = 1395.0
margin_top = 15.0
margin_right = 1435.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="Scoreboard/Kscore"]
modulate = Color( 1, 1, 1, 0.635294 )
self_modulate = Color( 1, 1, 1, 0.588235 )
show_behind_parent = true
position = Vector2( 13.3314, 8.01717 )
scale = Vector2( 0.514367, 0.646475 )
color = Color( 0.109804, 0.0980392, 0.0980392, 1 )
polygon = PoolVector2Array( -60.0493, -28.5006, -37.3867, 18.722, 49.4541, 18.754, 73.5145, -29.0304 )

[node name="Time" type="Label" parent="Scoreboard"]
margin_left = 660.01
margin_top = 8.48987
margin_right = 731.01
margin_bottom = 46.4899
rect_scale = Vector2( 2, 2 )
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Scoreboard/Time"]
wait_time = 0.1

[node name="Polygon2D" type="Polygon2D" parent="Scoreboard/Time"]
modulate = Color( 1, 1, 1, 0.427451 )
show_behind_parent = true
position = Vector2( 31.879, 6.75633 )
scale = Vector2( 0.454367, 0.464427 )
color = Color( 0.133333, 0.121569, 0.121569, 1 )
polygon = PoolVector2Array( -60.0493, -28.5006, -37.3867, 18.722, 49.4541, 18.754, 73.5145, -29.0304 )

[node name="SatzSprite" parent="Scoreboard" instance=ExtResource( 20 )]
visible = false

[node name="StatusLabel" type="Label" parent="Scoreboard"]
margin_left = 670.0
margin_top = 50.0
margin_right = 790.0
margin_bottom = 90.0
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 720, 382 )
z_index = -2
z_as_relative = false

[node name="Blue_BG" type="Sprite" parent="Background"]
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="Background/Blue_BG"]
texture = ExtResource( 17 )
energy = 0.46
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 1
shadow_filter_smooth = 10.0

[node name="SpriteLight" type="Sprite" parent="Background/Blue_BG/Light2D"]
z_index = 6
texture = ExtResource( 18 )

[node name="Stars" type="Sprite" parent="Background"]
texture = ExtResource( 8 )

[node name="Wahrzeichen" type="Sprite" parent="Background"]
texture = ExtResource( 10 )

[node name="Horizont" type="Sprite" parent="Background"]
texture = ExtResource( 13 )

[node name="Haeuser" type="Sprite" parent="Background"]
position = Vector2( 0.902527, 0 )
texture = ExtResource( 7 )

[node name="Lampen" type="Sprite" parent="Background"]
texture = ExtResource( 9 )

[node name="SpriteGlow" type="Sprite" parent="Background/Lampen"]
modulate = Color( 1, 1, 1, 0.423529 )
show_behind_parent = true
texture = ExtResource( 16 )

[node name="Shadow_street" type="Sprite" parent="Background"]
visible = false
z_index = 2
texture = ExtResource( 11 )

[node name="Zaun" type="Sprite" parent="Background"]
z_index = 2
texture = ExtResource( 12 )

[node name="Netz" type="Sprite" parent="Background"]
z_index = 1
texture = ExtResource( 14 )
[connection signal="body_entered" from="PlayerF/Area2D" to="PlayerF" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerK/Area2D" to="PlayerK" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Boden/Links" to="." method="_on_Links_body_entered"]
[connection signal="body_entered" from="Boden/Rechts" to="." method="_on_Rechts_body_entered"]
[connection signal="timeout" from="Scoreboard/Time/Timer" to="Scoreboard/Time" method="_on_Timer_timeout"]
